kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-server
  name: grpc-server
spec:
  ports:
  - name: "8081"
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: grpc-server
  type: ClusterIP
